--- a/TP1/TP1.ipynb
+++ b/TP1/TP1.ipynb
@@ -177,7 +177,6 @@
    "source": [
     "from itertools import permutations\n",
     "\n",
-    "\n",
     "n = 3\n",
     "s_i = [100, 1, 500]\n",
     "a_i = [8, 3, 1]\n",
@@ -192,7 +191,6 @@
     "for perm_indices in permutations_indices:\n",
     "    orden_rivales = [(s_i[i], a_i[i]) for i in perm_indices]\n",
     "    tiempo = tiempo_total(orden_rivales)\n",
-    "    print(tiempo)\n",
     "    if tiempo < tiempo_minimo:\n",
     "        tiempo_minimo = tiempo\n",
     "\n",
@@ -409,6 +407,14 @@
     "print(f\"Tiempo total para 10000 compilados: {tiempo_n10000_total}\")\n",
     "print(f\"Tiempo óptimo para {resultados_optimos[3]}\")\n",
     "print(f\"Es optimo? {tiempo_n10000_total ==  valores_optimos[3]}\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Llegamos a la solución óptima. Explicación: El tiempo no se ve afectado por cuánto tarde Scaloni, porque suponiendo una situación ideal en donde los ayudantes tarden 0min en revisar los compilados, daría igual el orden en el que se analizen, el tiempo total siempre sería la suma de los s_i.\n",
+    "Por lo tanto, depende sólo de los tiempos de los ayudantes. ¿Por qué tomar el próximo video que más le lleve ver? Esto es para que mientras que uno lo analiza, se puedan ir analizando otros al mismo tiempo. Si dejáramos para el final el de mayor a_i nos tardaría mucho más."
    ]
   }
  ],
