Test con tiempos repetidos

--- a/TP1/TP1.ipynb
+++ b/TP1/TP1.ipynb
@@ -58,7 +58,8 @@
     "path_100_compilados = 'sets/catedra/100 elem.txt'\n",
     "path_10000_compilados = 'sets/catedra/10000 elem.txt'\n",
     "path_tiempos_optimos = 'sets/catedra/Tiempos optimos.txt'\n",
-    "path_contraejemplo_si = 'sets/nuestros/contraej si.txt'"
+    "path_contraejemplo_si = 'sets/nuestros/contraej si.txt'\n",
+    "path_repeticiones = 'sets/nuestros/set con repetidos.txt'"
    ]
   },
   {
@@ -415,6 +416,22 @@
    "source": [
     "Llegamos a la solución óptima. Explicación: El tiempo no se ve afectado por cuánto tarde Scaloni, porque suponiendo una situación ideal en donde los ayudantes tarden 0min en revisar los compilados, daría igual el orden en el que se analizen, el tiempo total siempre sería la suma de los s_i.\n",
     "Por lo tanto, depende sólo de los tiempos de los ayudantes. ¿Por qué tomar el próximo video que más le lleve ver? Esto es para que mientras que uno lo analiza, se puedan ir analizando otros al mismo tiempo. Si dejáramos para el final el de mayor a_i nos tardaría mucho más."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5 - Tests con Sets Propios"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tiempos_con_repeticiones ="
    ]
   }
  ],
