Prueba con set de todos los tiempos de ayudantes repetidos

--- a/TP1/TP1.ipynb
+++ b/TP1/TP1.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,12 +59,13 @@
     "path_10000_compilados = 'sets/catedra/10000 elem.txt'\n",
     "path_tiempos_optimos = 'sets/catedra/Tiempos optimos.txt'\n",
     "path_contraejemplo_si = 'sets/nuestros/contraej si.txt'\n",
-    "path_repeticiones = 'sets/nuestros/set con repetidos.txt'"
+    "path_repeticiones = 'sets/nuestros/set con repetidos.txt'\n",
+    "path_todas_repeticiones_ayudantes = 'sets/nuestros/set con repetidos.txt'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -426,12 +427,56 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "En primer lugar probaremos el caso en que algunos tiempos de vídeo se repitan, tanto para Scaloni como sus ayudantes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tiempo total para videos con repeticiones: 27\n",
+      "Tiempo óptimo para videos con tiempos repetidos: 27\n",
+      "Es optimo? True\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "tiempos_con_repeticiones = obtener_tiempos(path_repeticiones)\n",
+    "tiempos_con_repeticiones_ordenados = ordenar_tupla(sort_by_ai, tiempos_con_repeticiones, True)\n",
+    "tiempo_repetidos_total = tiempo_total(tiempos_con_repeticiones_ordenados)\n",
+    "print(f\"Tiempo total para videos con repeticiones: {tiempo_repetidos_total}\")\n",
+    "print(f\"Tiempo óptimo para videos con tiempos repetidos: 27\")\n",
+    "print(f\"Es optimo? {tiempo_repetidos_total ==  27}\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ahora vamos a analizar si la solución es óptima cuando todos los vídeos demoran lo mismo para los ayudantes."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tiempos_con_repeticiones ="
+    "tiempos_con_repeticiones = obtener_tiempos(path_repeticiones)\n",
+    "tiempos_con_repeticiones_ordenados = ordenar_tupla(sort_by_ai, tiempos_con_repeticiones, True)\n",
+    "tiempo_repetidos_total = tiempo_total(tiempos_con_repeticiones_ordenados)\n",
+    "print(f\"Tiempo total para videos con repeticiones: {tiempo_repetidos_total}\")\n",
+    "print(f\"Tiempo óptimo para videos con tiempos repetidos: 27\")\n",
+    "print(f\"Es optimo? {tiempo_repetidos_total ==  27}\\n\")"
    ]
   }
  ],
@@ -451,7 +496,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4
  },
