corrección descripción funciones

--- a/TP1/TP1.ipynb
+++ b/TP1/TP1.ipynb
@@ -69,8 +69,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Función para ordenar según un criterio. \n",
-    "# Tiempos es una lista de tuplas (s_i, a_i)\n",
+    "# Ordena la lista de tuplas (s_i, a_i) por el criterio pasado por parametro\n",
+    "# de manera ascendente o descendente según el valor de reverse.\n",
+    "# Devuelve la lista ordenada según dicho criterio.\n",
     "def ordenar_tupla(criterio, tiempos, reverse = False):\n",
     "    tiempos.sort(key = criterio, reverse = reverse)  #justificar O(nlogn )\n",
     "    return tiempos"
@@ -82,19 +83,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Función para obtener el tiempo total que le lleva ver todos los videos\n",
+    "# Obtiene el tiempo en el que se termina de analizar el último video\n",
     "# Ejemplo:\n",
-    "#    1,8 -> termina en min 9\n",
-    "#    3,3 -> termina en min 7\n",
-    "#    5,1 -> termina en min 10\n",
-    "#    total = 10\n",
+    "#    1,8 -> termina en el min 9\n",
+    "#    3,3 -> termina en el min 7\n",
+    "#    5,1 -> termina en el min 10 -> total = 10\n",
+    "\n",
     "def tiempo_total(tiempos):\n",
     "    total_scaloni = 0\n",
     "    tiempos_por_video = []\n",
     "    for tupla in tiempos:\n",
     "        total_scaloni += tupla[0]\n",
     "        tiempos_por_video.append(total_scaloni + tupla[1])\n",
-    "    return max(tiempos_por_video) #TODO complejidad?"
+    "    return max(tiempos_por_video) "
    ]
   },
   {
@@ -103,7 +104,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Obtiene los tiempos óptimos, con formato\n",
+    "# Obtiene los tiempos óptimos formateados esperados para cada set de datos.\n",
     "def tiempos_optimos(path):\n",
     "    with open(path, \"r\") as archivo:\n",
     "        lineas = archivo.readlines()\n",
@@ -125,7 +126,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Obtiene los tiempos óptimos de un archivo, sin formato\n",
+    "# Obtiene los tiempos óptimos sin formato (el valor entero) para cada set de datos.\n",
     "def obtener_valores_optimos(resultados_optimos):\n",
     "    valores = []\n",
     "    for resultado in resultados_optimos:\n",
