cargo nuestros sets y los uso

--- a/TP1/TP1.ipynb
+++ b/TP1/TP1.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,49 +155,31 @@
     "tiempos_n10000 = obtener_tiempos(path_10000_compilados)\n",
     "resultados_optimos = tiempos_optimos(path_tiempos_optimos)\n",
     "valores_optimos = obtener_valores_optimos(resultados_optimos)\n",
-    "tiempos_contraej_si = obtener_tiempos(path_contraejemplo_si)"
+    "tiempos_contraej_si = obtener_tiempos(path_contraejemplo_si)\n",
+    "repeticiones = obtener_tiempos(path_repeticiones)\n",
+    "repeticiones_ayudantes = obtener_tiempos(path_todas_repeticiones_ayudantes)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 128,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "602\n",
-      "604\n",
-      "602\n",
-      "609\n",
-      "608\n",
-      "609\n",
-      "Tiempo mínimo total: 602\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "#Función para calcular por fuerza bruta cual es el óptimo\n",
     "from itertools import permutations\n",
     "\n",
-    "n = 3\n",
-    "s_i = [100, 1, 500]\n",
-    "a_i = [8, 3, 1]\n",
+    "def calcular_optimo(n, s_i, a_i):\n",
+    "    permutations_indices = permutations(range(n))\n",
     "\n",
-    "# Combinaciones posibles de orden del array\n",
-    "permutations_indices = permutations(range(n))\n",
+    "    tiempo_minimo = float('inf')\n",
     "\n",
-    "# Inicializamos el tiempo mínimo con un valor grande\n",
-    "tiempo_minimo = float('inf')\n",
-    "\n",
-    "# Iteramos a través de todas las combinaciones posibles\n",
-    "for perm_indices in permutations_indices:\n",
-    "    orden_rivales = [(s_i[i], a_i[i]) for i in perm_indices]\n",
-    "    tiempo = tiempo_total(orden_rivales)\n",
-    "    if tiempo < tiempo_minimo:\n",
-    "        tiempo_minimo = tiempo\n",
-    "\n",
-    "print(\"Tiempo mínimo total:\", tiempo_minimo)"
+    "    for perm_indices in permutations_indices:\n",
+    "        orden_rivales = [(s_i[i], a_i[i]) for i in perm_indices]\n",
+    "        tiempo = tiempo_total(orden_rivales)\n",
+    "        if tiempo < tiempo_minimo:\n",
+    "            tiempo_minimo = tiempo\n",
+    "    return tiempo_minimo"
    ]
   },
   {
@@ -209,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +202,7 @@
       "Tiempo total para 3 compilados: 10\n",
       "Tiempo óptimo para 3 elementos: 10\n",
       "En este caso nos dió bien, pero mostramos un contraejemplo:\n",
-      "Contraejemplo: [(1, 1), (3, 3), (5, 8)]\n",
+      "Contraejemplo: [(3, 3), (5, 8), (1, 1)]\n",
       "Tiempo total para contraejemplo: 17\n",
       "Ese resultado no es el óptimo, porque por ejemplo:\n",
       " Si tomamos las tareas en este orden [(5, 8), (1, 1), (3, 3)] nos da un tiempo total de 13 que es menor a 17.\n"
@@ -258,21 +240,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Primer caso de prueba: [(5, 1), (3, 3), (1, 8)]\n",
+      "Primer caso de prueba: [(1, 8), (3, 3), (5, 1)]\n",
       "Tiempo total para 3 compilados: 17\n",
       "Tiempo óptimo para 3 elementos: 10\n",
       "Es optimo? False\n",
       "\n",
       "Como podemos observar, el tiempo total es mayor al óptimo. Esto se debe a que al no estar teniendose en consideración el tiempo que tardan \n",
       "los atudantes en ver los videos, se puede dar el caso donde el último video que se vea por parte de Scaloni (menos tarda en analizar) \n",
-      "sea uno en el cual los ayudantes tardan mucho en ver. En este caso, el ultimo video que analiza Scaloni es justamente en el que más tardan los ayudantes\n",
+      "sea uno en el cual los ayudantes tardan mucho en ver. En este caso, el ultimo video que analiza Scaloni es justamente en el que más tardan los ayudantes.\n",
       "\n"
      ]
     }
@@ -299,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -431,32 +413,61 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "En primer lugar probaremos el caso en que algunos tiempos de vídeo se repitan, tanto para Scaloni como sus ayudantes"
+    "Calculamos en primer lugar los óptimos para nuestros sets de datos. Estos valores son los que nos debería dar nuestro algoritmo Greedy."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def optimos_fuerza_bruta(tiempos):\n",
+    "    return calcular_optimo(len(tiempos), [tupla[0] for tupla in tiempos], [tupla[1] for tupla in tiempos])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calcular_y_mostrar_resultados(datos):\n",
+    "    tiempos_con_repeticiones_ordenados = ordenar_tupla(sort_by_ai, datos, True)\n",
+    "    tiempo_repetidos_total = tiempo_total(tiempos_con_repeticiones_ordenados)\n",
+    "    optimo = optimos_fuerza_bruta(datos)\n",
+    "    \n",
+    "    print(f\"Tiempo total para videos con repeticiones con algoritmo Greedy: {tiempo_repetidos_total}\")\n",
+    "    print(f\"Tiempo óptimo para videos con tiempos repetidos: {optimo}\")\n",
+    "    print(f\"¿Es óptimo? {tiempo_repetidos_total == optimo}\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nos fue de interés ver qué sucedía con sets de datos con repeticiones. \n",
+    "En primer lugar probaremos el caso en el que algunos se repiten, tanto para Scaloni como para sus ayudantes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tiempo total para videos con repeticiones: 27\n",
+      "Tiempo total para videos con repeticiones con algoritmo Greedy: 27\n",
       "Tiempo óptimo para videos con tiempos repetidos: 27\n",
-      "Es optimo? True\n",
+      "¿Es óptimo? True\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "tiempos_con_repeticiones = obtener_tiempos(path_repeticiones)\n",
-    "tiempos_con_repeticiones_ordenados = ordenar_tupla(sort_by_ai, tiempos_con_repeticiones, True)\n",
-    "tiempo_repetidos_total = tiempo_total(tiempos_con_repeticiones_ordenados)\n",
-    "print(f\"Tiempo total para videos con repeticiones: {tiempo_repetidos_total}\")\n",
-    "print(f\"Tiempo óptimo para videos con tiempos repetidos: 27\")\n",
-    "print(f\"Es optimo? {tiempo_repetidos_total ==  27}\\n\")"
+    "calcular_y_mostrar_resultados(repeticiones)"
    ]
   },
   {
@@ -468,16 +479,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 136,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tiempo total para videos con repeticiones con algoritmo Greedy: 27\n",
+      "Tiempo óptimo para videos con tiempos repetidos: 27\n",
+      "¿Es óptimo? True\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "tiempos_con_repeticiones = obtener_tiempos(path_repeticiones)\n",
-    "tiempos_con_repeticiones_ordenados = ordenar_tupla(sort_by_ai, tiempos_con_repeticiones, True)\n",
-    "tiempo_repetidos_total = tiempo_total(tiempos_con_repeticiones_ordenados)\n",
-    "print(f\"Tiempo total para videos con repeticiones: {tiempo_repetidos_total}\")\n",
-    "print(f\"Tiempo óptimo para videos con tiempos repetidos: 27\")\n",
-    "print(f\"Es optimo? {tiempo_repetidos_total ==  27}\\n\")"
+    "calcular_y_mostrar_resultados(repeticiones_ayudantes)"
    ]
   }
  ],
@@ -497,7 +514,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4
  },
