cargo nuestros sets y los uso

--- a/TP1/TP1.ipynb
+++ b/TP1/TP1.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,12 +60,12 @@
     "path_tiempos_optimos = 'sets/catedra/Tiempos optimos.txt'\n",
     "path_contraejemplo_si = 'sets/nuestros/contraej si.txt'\n",
     "path_repeticiones = 'sets/nuestros/set con repetidos.txt'\n",
-    "path_todas_repeticiones_ayudantes = 'sets/nuestros/set con repetidos.txt'"
+    "path_todas_repeticiones_ayudantes = 'sets/nuestros/set con todos los ayudantes repetidos.txt'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
