funcion para probar

--- a/TP1/TP1.ipynb
+++ b/TP1/TP1.ipynb
@@ -496,6 +496,27 @@
    "source": [
     "calcular_y_mostrar_resultados(repeticiones_ayudantes)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A continuación dejamos armado un entorno de ejecución para que puedan probar el algoritmo con cualquier set de datos:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calcular_y_mostrar_resultados(datos):\n",
+    "    tiempos_ordenados = ordenar_tupla(sort_by_ai, datos, True)\n",
+    "    tiempo_optimo = tiempo_total(tiempos_ordenados)\n",
+    "\n",
+    "    print(f\"Tiempo total para videos con repeticiones con algoritmo Greedy: {tiempo_optimo}\")\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
