Prueba con set customizado

--- a/TP1/TP1.ipynb
+++ b/TP1/TP1.ipynb
@@ -514,7 +514,12 @@
     "    tiempos_ordenados = ordenar_tupla(sort_by_ai, datos, True)\n",
     "    tiempo_optimo = tiempo_total(tiempos_ordenados)\n",
     "\n",
-    "    print(f\"Tiempo total para videos con repeticiones con algoritmo Greedy: {tiempo_optimo}\")\n",
+    "    print(f\"Tiempo total para el set de videos customizado, otorgado por el usuario, con algoritmo Greedy: {tiempo_optimo}\")\n",
+    "\n",
+    "path_customizado = 'sets/catedra/3 elem.txt' #CAMBIAR EL PATH\n",
+    "tiempos_customizados = obtener_tiempos(path_customizado)\n",
+    "calcular_y_mostrar_resultados(tiempos_customizados)\n",
+    "\n",
     "\n"
    ]
   }
