saco lo q no va

--- a/TP1/TP1.ipynb
+++ b/TP1/TP1.ipynb
@@ -518,9 +518,7 @@
     "\n",
     "path_customizado = 'sets/catedra/3 elem.txt' #CAMBIAR EL PATH\n",
     "tiempos_customizados = obtener_tiempos(path_customizado)\n",
-    "calcular_y_mostrar_resultados(tiempos_customizados)\n",
-    "\n",
-    "\n"
+    "calcular_y_mostrar_resultados(tiempos_customizados)"
    ]
   }
  ],
